@@ -3,6 +3,8 @@ Changes in JMurmel-1.4.8 relative to JMurmel-1.4.7
 
  * fixes around nested backquotes
 
+ * mlib: added shiftf
+
  * fixed mlib: evaluation order in setf and psetf forms
 
 
